Penambahan Header dan Footer

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Latihan Git</title>
 </head>
 <body>
+    <header>Ini adalah Header</header>
     <h1>PT M.Naufal Sandy Pratama</h1>
     <h2>Mencoba Git</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea dolorem fuga earum sunt necessitatibus possimus. Aliquid, molestias, doloremque sapiente soluta suscipit eveniet magni a autem sequi, quo aspernatur perferendis veritatis!</p>
-    
+    <footer>Ini adalah Footer</footer>
 </body>
 </html>
