membuat form di dalam kontak

--- a/contact-us.html
+++ b/contact-us.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Ceritanya ini halaman contact</h1>
     <p>Ini adalah halaman contact</p>
+    <form action=""></form>
     <footer>Ini adalah footer</footer>
     
 </body>
